# RL_HW1

./: README.md
armando_controller/: CMakeLists.txt  package.xml
armando_controller/src/: arm_controller_node.cpp
armando_description/: CMakeLists.txt  package.xml
armando_description/config/: armando_controllers.yaml  prova1.rviz
armando_description/install/: setup.sh
armando_description/install/armando_description/share/ament_index/resource_index/package_run_dependencies/: armando_description
armando_description/install/armando_description/share/ament_index/resource_index/parent_prefix_path/: armando_description
armando_description/install/armando_description/share/armando_description/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.xml
armando_description/install/armando_description/share/armando_description/cmake/: armando_descriptionConfig-version.cmake  armando_descriptionConfig.cmake
armando_description/install/armando_description/share/armando_description/environment/: ament_prefix_path.dsv  path.dsv
armando_description/launch/: armando_display.launch.py
armando_description/log/: latest_build
armando_description/urdf/: arm.urdf.xacro  armando_hardware_interface.xacro
armando_gazebo/: CMakeLists.txt  README.md  package.xml
armando_gazebo/launch/: armando_world.launch.py
armando_gazebo/urdf/: armando_camera.xacro
