<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>armando_gazebo</name>
  <version>1.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="mariach.bruno@studenti.unina.it">emmecci01</maintainer>
  <license>TODO: License declaration</license>

  
  <!-- Dipendenze di build -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <!-- <build_depend>launch</build_depend> -->
  <!-- <build_depend>launch_ros</build_depend> -->
  <build_depend>ros_gz_sim</build_depend>
  <build_depend>xacro</build_depend> <!-- solo se usi file .xacro -->
  <build_depend>armando_description</build_depend>


  <!-- Dipendenze di esecuzione -->
  <!-- <exec_depend>launch</exec_depend> -->
  <!-- <exec_depend>launch_ros</exec_depend> -->
  <exec_depend>ros_gz_sim</exec_depend>
  <exec_depend>xacro</exec_depend> <!-- se usi xacro -->
  <exec_depend>armando_description</exec_depend><!-- per includere il tuo URDF e launch -->
  <depend>urdf-launch</depend>
  

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>